<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">*</string>
    <string name="_share">/</string>
    <string name="_equally">=</string>
    <string name="clear">Clear</string>
    <string name="textSettings">Theme:</string>
    <string name="textSetting1">Serene</string>
    <string name="textSetting2">Romantic</string>
    <string name="textSetting3">Sublime</string>
    <string name="theme">Theme</string>
</resources>