<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TableButtonStyle">

    <TableRow
        style="@style/TableButtonStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:text="@string/_1"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:text="@string/_2"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:text="@string/_3"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            android:text="@string/_plus"
            style="@style/ButtonStyle"/>

    </TableRow>

    <TableRow
        style="@style/TableButtonStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:text="@string/_4"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:text="@string/_5"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:text="@string/_6"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            android:text="@string/_minus"
            style="@style/ButtonStyle"/>

    </TableRow>

    <TableRow
        style="@style/TableButtonStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:text="@string/_7"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:text="@string/_8"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:text="@string/_9"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiply"
            android:text="@string/_multiply"
            style="@style/ButtonStyle"/>

    </TableRow>

    <TableRow
        style="@style/TableButtonStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPoint"
            android:text="@string/_point"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:text="@string/_0"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEqually"
            android:text="@string/_equally"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonShare"
            android:text="@string/_share"
            style="@style/ButtonStyle"/>

    </TableRow>

</TableLayout>