<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/fon1"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSettings"
        style="@style/TableButtonStyle"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/marginResult"
        android:layout_marginRight="@dimen/marginResult"
        android:text="@string/theme"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/marginResult"
        android:text="@string/clear"/>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightResult"
        android:background="@drawable/back"
        android:layout_margin="@dimen/marginResult"
        android:gravity="right"
        android:padding="@dimen/paddingResult"
        android:text="@string/_0"
        android:textColor="@color/black"/>

    <include layout="@layout/activity_keyboard" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>